# botnet-detection

./: .gitignore  analysis.ipynb  analysis.py  pyproject.toml  test_botnet_dataset.py
botdet/data/: data_utils.py  dataset_botnet.py  url_utils.py
